add formatting corrections
final submitted version

--- a/fishsense.bib
+++ b/fishsense.bib
@@ -106,7 +106,6 @@
   number   = {3},
   pages    = {369-382},
   volume   = {134},
-  abstract = {Abstract Investigating sexual dimorphism is important for our understanding of its influence on reproductive strategies including maleâmale competition, mate choice, and sexual conflict. Measuring physical traits in wild animals can be logistically challenging and disruptive for the animals. Therefore body size and ornament variation in wild primates have rarely been quantified. Gorillas are amongst the most sexually dimorphic and dichromatic primates. Adult males (silverbacks) possess a prominent sagittal crest, a pad of fibrous and fatty tissue on top of the head, have red crest coloration, their saddle appears silver, and they possess a silverline along their stomach. Here we measure levels of sexual dimorphism and within-male variation of body length, head size, and sexual dichromatism in a population of wild western gorillas using photogrammetry. Digital photogrammetry is a useful and precise method to measure sexual dimorphism in physical traits yielding sexual dimorphism indices (ISD), similar to those derived from traditional measurements of skeletal remains. Silverbacks were on an average 1.23 times longer in body length than adult females. Sexual dimorphism of head size was highest in measures of crest size (max ISD: 60.4) compared with measures of facial height (max ISD: 24.7). The most sexually dimorphic head size measures also showed the highest within-sex variation. We found no clear sex differences in crest coloration but there was large sexual dichromatism with high within-male variation in saddle coloration and silverline size. Further studies should examine if these sexually dimorphic traits are honest signals of competitive ability and confer an advantage in reproductive success. Am J Phys Anthropol, 2007. Â© 2007 Wiley-Liss, Inc.},
   doi      = {https://doi.org/10.1002/ajpa.20678},
   eprint   = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/ajpa.20678},
   groups   = {Laser Rangefinder},
@@ -256,7 +255,7 @@
 @Article{Ebrahim2015,
   author  = {Ebrahim, Mostafa Abdel-Bary},
   journal = {Int J Sci Res},
-  title   = {3D laser scanners’ techniques overview},
+  title   = {3D laser scanners' techniques overview},
   year    = {2015},
   number  = {10},
   pages   = {323--331},
@@ -354,7 +353,6 @@
   number   = {7},
   pages    = {1083-1090},
   volume   = {10},
-  abstract = {Abstract There has been rapid uptake of stereo-video-based sampling techniques to collect species, abundance and body-size information on fish assemblages and their associated habitats. Stereo-video methods provide highly accurate estimates of body-size, range and sampling area as well as a permanent record that can be cross-checked or resampled for additional data. Due to these advantages, diver-operated stereo-video (stereo-DOV) is becoming an increasingly popular alternative to underwater visual census. We provide a comprehensive guide for researchers using stereo-DOVs to survey fish assemblages and their associated habitat. Information on stereo-DOV design, video camera settings, field operations and video analysis are outlined. StereoâDOV surveys permit rapid and simultaneous collection of data on fish diversity, abundance, length and behaviour as well as their associated habitat. However, biases associated with diver presence in the water and variation in detectability should be considered and are dependent on the location and focal species of the survey. We recommend using stereo-DOVs for diver-based surveys of non-cryptic fish assemblages, given the advantages described. An increased uptake of this methodology, following the standard procedures described herein, will reduce variation in methodology, assist in the synthesis of data on continental and global scales and provide accurate information to improve fisheries management and conservation.},
   doi      = {https://doi.org/10.1111/2041-210X.13189},
   eprint   = {https://besjournals.onlinelibrary.wiley.com/doi/pdf/10.1111/2041-210X.13189},
   groups   = {Stereo Camera, Fish Analysis},
@@ -485,7 +483,7 @@
   number   = {4},
   pages    = {297-309},
   volume   = {54},
-  abstract = {{Rapid declines threaten the persistence of many marine fish. Data from more than 230 populations reveal a median reduction of 83\\% in breeding population size from known historic levels. Few populations recover rapidly; most exhibit little or no change in abundance up to 15 years after a collapse. Reductions in fishing pressure, although clearly necessary for population recovery, are often insufficient. Persistence and recovery are also influenced by life history, habitat alteration, changes to species assemblages, genetic responses to exploitation, and reductions in population growth attributable to the Allee effect, also known as depensation. Heightened extinction risks were highlighted recently when a Canadian population of Atlantic cod (Gadus morhua) was listed as endangered, on the basis of declines as high as 99.9\\% over 30 years. Unprecedented reductions in abundance and surprisingly low rates of recovery draw attention to scientists' limited understanding of how fish behavior, habitat, ecology, and evolution affect population growth at low abundance. Failure to prevent population collapses, and to take the conservation biology of marine fishes seriously, will ensure that many severely depleted species remain ecological and numerical shadows in the ecosystems that they once dominated.}},
+  abstract = {Rapid declines threaten the persistence of many marine fish. Data from more than 230 populations reveal a median reduction of 83\% in breeding population size from known historic levels. Few populations recover rapidly; most exhibit little or no change in abundance up to 15 years after a collapse. Reductions in fishing pressure, although clearly necessary for population recovery, are often insufficient. Persistence and recovery are also influenced by life history, habitat alteration, changes to species assemblages, genetic responses to exploitation, and reductions in population growth attributable to the Allee effect, also known as depensation. Heightened extinction risks were highlighted recently when a Canadian population of Atlantic cod (Gadus morhua) was listed as endangered, on the basis of declines as high as 99.9\% over 30 years. Unprecedented reductions in abundance and surprisingly low rates of recovery draw attention to scientists' limited understanding of how fish behavior, habitat, ecology, and evolution affect population growth at low abundance. Failure to prevent population collapses, and to take the conservation biology of marine fishes seriously, will ensure that many severely depleted species remain ecological and numerical shadows in the ecosystems that they once dominated.},
   doi      = {10.1641/0006-3568(2004)054[0297:MFPCCF]2.0.CO;2},
   eprint   = {https://academic.oup.com/bioscience/article-pdf/54/4/297/26895516/54-4-297.pdf},
   groups   = {Ecology},
@@ -528,7 +526,6 @@
   number   = {4},
   pages    = {862-879},
   volume   = {22},
-  abstract = {Abstract Knowledge of whale length is important to ecological studies. However, photographic techniques to measure sperm whales traditionally require high vantage points or a complicated stereo system. Furthermore, these traditional techniques require an alongside approach that often prevents individual identification. For simple and fast size measurements at sea, I used a laser range finder alongside a digital camera to obtain distance to the fluke at the same time as photo-identification. The camera/lens and laser range finder were calibrated on objects of known lengths. The coefficient of variation (CV) for test objects was low (CV = 0.21\%). Forty-seven individually identified sperm whales were measured repetitively on up to 12 different occasions, and the CV was lower (CV = 1.3\%) than for other photogrammetric techniques (CV = 4.4\%â5.1\%). A regression of log fluke span to log total length from whaling and stranding data yielded an râ2 of 0.87 (CV of residuals = 6.7\%). Thirty-eight female/immature sperm whales were measured in the Gulf of Mexico (median = 9.3 m, range = 7.1â12.3 m), 167 in the Gulf of California (median = 10.7 m, range = 8.4â13.1 m) and 13 bachelor males off Kaikoura, New Zealand (median = 14.2, range = 11.7â15.8 m). The results were within known sperm whale size and suggested that the population in the Gulf of Mexico was made up of smaller animals than that of the Gulf of California. This technique is easy to implement and allows the measurement of identified individuals.},
   doi      = {https://doi.org/10.1111/j.1748-7692.2006.00060.x},
   eprint   = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1748-7692.2006.00060.x},
   groups   = {Fish Analysis, Laser Rangefinder},
@@ -756,7 +753,6 @@ To the best of our knowledge, this is the first study connecting image enhanceme
   number   = {6},
   pages    = {2245-2254},
   volume   = {77},
-  abstract = {{Videogrammetry and photogrammetry are increasingly being used in marine science for unsupervised data collection. The camera systems employed are complex, in contrast to “consumer” digital cameras and smartphones carried by potential citizen scientists. However, using consumer cameras in photogrammetry will introduce unknown length estimation errors through both the image acquisition process and lens distortion. This study presents a methodology to achieve accurate 2-dimensional (2-D) total length (TL) estimates of fish without specialist equipment or proprietary software. Photographs of fish were captured with an action camera using a background fiducial marker, a foreground fiducial marker and a laser marker. The geometric properties of the lens were modelled with OpenCV to correct image distortion. TL estimates were corrected for parallax effects using an algorithm requiring only the initial length estimate and known fish morphometric relationships. Correcting image distortion decreased RMSE by 96\\% and the percentage mean bias error (\\%MBE) by 50\\%. Correcting for parallax effects achieved a \\%MBE of −0.6\\%. This study demonstrates that the morphometric measurement of different species can be accurately estimated without the need for complex camera equipment, making it particularly suitable for deployment in citizen science and other volunteer-based data collection endeavours.}},
   doi      = {10.1093/icesjms/fsz030},
   eprint   = {https://academic.oup.com/icesjms/article-pdf/77/6/2245/38496874/fsz030.pdf},
   groups   = {Fish Analysis, Laser Rangefinder},
@@ -994,7 +990,6 @@ To the best of our knowledge, this is the first study connecting image enhanceme
   number   = {1},
   pages    = {378-385},
   volume   = {78},
-  abstract = {Laser photogrammetry was found to be a promising new cost-effective technique for measuring free-swimming whale sharks Rhincodon typus. Photogrammetric measurements were more precise than visual size estimates by experienced researchers, with results from the two methods differing by 9Â· 8 Â± 1Â· 1\% (mean Â±s.e.). A new metric of total length and the length between the fifth gill and first dorsal fin (r2 = 0Â· 93) is proposed to facilitate easy, accurate length measurements of whale sharks in the field.},
   doi      = {https://doi.org/10.1111/j.1095-8649.2010.02861.x},
   eprint   = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1095-8649.2010.02861.x},
   groups   = {Fish Analysis},
@@ -1027,14 +1022,13 @@ To the best of our knowledge, this is the first study connecting image enhanceme
 @Article{Shafait2017,
   author   = {Shafait, Faisal and Harvey, Euan S. and Shortis, Mark R. and Mian, Ajmal and Ravanbakhsh, Mehdi and Seager, James W. and Culverhouse, Philip F. and Cline, Danelle E. and Edgington, Duane R.},
   journal  = {ICES Journal of Marine Science},
-  title    = {{Towards automating underwater measurement of fish length: a comparison of semi-automatic and manual stereo–video measurements}},
+  title    = {Towards automating underwater measurement of fish length: a comparison of semi-automatic and manual stereo-video measurements},
   year     = {2017},
   issn     = {1054-3139},
   month    = {02},
   number   = {6},
   pages    = {1690-1701},
   volume   = {74},
-  abstract = {Underwater stereo–video systems are widely used for counting and measuring fish in aquaculture, fisheries, and conservation management. Length measurements are generated from stereo–video recordings by a software operator using a mouse to locate the head and tail of a fish in synchronized pairs of images. This data can be used to compare spatial and temporal changes in the mean length and biomass or frequency distributions of populations of fishes. Since the early 1990s stereo–video has also been used for measuring the lengths of fish in aquaculture for quota and farm management. However, the costs of the equipment, software, the time, and salary costs involved in post processing imagery manually and the subsequent delays in the availability of length information inhibit the adoption of this technology.We present a semi-automatic method for capturing stereo–video measurements to estimate the lengths of fish. We compare the time taken to make measurements of the same fish measured manually from stereo–video imagery to that measured semi-automatically. Using imagery recorded during transfers of Southern Bluefin Tuna (SBT) from tow cages to grow out cages, we demonstrate that the semi-automatic algorithm developed can obtain fork length measurements with an error of less than 1\\% of the true length and with at least a sixfold reduction in operator time in comparison to manual measurements. Of the 22 138 SBT recorded we were able to measure 52.6\\% (11 647) manually and 11.8\\% (2614) semi-automatically. For seven of the eight cage transfers recorde,d there were no statistical differences in the mean length, weight, or length frequency between manual and semi-automatic measurements. When the data were pooled across the eight cage transfers, there was no statistical difference in mean length or weight between the stereo–video-based manual and semi-automated measurements. Hence, the presented semi-automatic system can be deployed to significantly reduce the cost involved in adoption of stereo–video technology.},
   doi      = {10.1093/icesjms/fsx007},
   eprint   = {https://academic.oup.com/icesjms/article-pdf/74/6/1690/31246707/fsx007.pdf},
   groups   = {Fish Analysis, Stereo Camera},
@@ -1275,7 +1269,6 @@ To the best of our knowledge, this is the first study connecting image enhanceme
   pages     = {1–5},
   publisher = {Association for Computing Machinery},
   series    = {WUWNet '22},
-  abstract  = {Depth cameras are increasingly used in research and industry in underwater settings. However, cameras that have been calibrated in air are notably inaccurate in depth measurements when placed underwater, and little research has been done to explore pre-existing depth calibration methodologies and their effectiveness in underwater environments. We used four methods of calibration on a low-cost, commercial depth camera both in and out of water. For each of these methods, we compared the predicted distance and length of objects from the camera with manually measured values to get an indication of depth and length accuracy. Our findings indicate that the standard methods of calibration in air are largely ineffective for underwater calibration and that custom calibration techniques are necessary to achieve higher accuracy.},
   day       = {29},
   doi       = {10.1145/3567600.3568158},
   groups    = {Camera Calibration, Stereo Camera, RealSense System},
@@ -1408,13 +1401,6 @@ To the best of our knowledge, this is the first study connecting image enhanceme
   doi       = {10.1007/978-3-319-23204-1},
 }
 
-@Article{,
-  journal = {Fisheries Bulletin},
-  year    = {2001},
-  month   = {01},
-  pages   = {38-49},
-}
-
 @InProceedings{Akkaynak_2017_CVPR,
 author = {Akkaynak, Derya and Treibitz, T FishSense Lite: A Camera-Based, Single Laser System for In Situ Fish Length Measurementali and Shlesinger, Tom and Loya, Yossi and Tamir, Raz and Iluz, David},
 title = {What Is the Space of Attenuation Coefficients in Underwater Computer Vision?},
@@ -1442,8 +1428,7 @@ pages = {e13000},
 keywords = {biomass, California, community-based science, empirical data, fish communities, marine protected areas, productivity, reserve network},
 doi = {https://doi.org/10.1111/conl.13000},
 url = {https://conbio.onlinelibrary.wiley.com/doi/abs/10.1111/conl.13000},
-eprint = {https://conbio.onlinelibrary.wiley.com/doi/pdf/10.1111/conl.13000},
-abstract = {Abstract A variety of criteria may influence the efficacy of networks of marine protected areas (MPA) designed to enhance biodiversity conservation and provide fisheries benefits. Meta-analyses have evaluated the influence of MPA attributes on abundance, biomass, and size structure of harvested species, reporting that MPA size, age, depth, and connectivity influence the strength of MPA responses. However, few empirical MPA evaluation studies have used consistent sampling methodology across multiple MPAs and years. Our collaborative fisheries research program systematically sampled 12 no-take or highly protective limited-take MPAs and paired fished reference areas across a network spanning 1100Â km of coastline to evaluate the factors driving MPA efficacy across a large geographic region. We found that increased size and age consistently contributed to increased fish catch, biomass, and positive species responses inside MPAs, while accounting for factors such as latitude, primary productivity, and distance to the nearest MPA. Our study provides a model framework to collaboratively engage diverse stakeholders in fisheries research and provide high-quality data to assess the success of conservation strategies.}
+eprint = {https://conbio.onlinelibrary.wiley.com/doi/pdf/10.1111/conl.13000}
 }
 
 @Article{Campbell2010,
@@ -1455,7 +1440,6 @@ abstract = {Abstract A variety of criteria may influence the efficacy of network
     pages = {513-521},
     year = {2009},
     month = {11},
-    abstract = "{Campbell, M. D., Patino, R., Tolan, J., Strauss, R., and Diamond, S. L. 2010. Sublethal effects of catch-and-release fishing: measuring capture stress, fish impairment, and predation risk using a condition index. – ICES Journal of Marine Science, 67: 513–521.The sublethal effects of simulated capture of red snapper (Lutjanus campechanus) were analysed using physiological responses, condition indexing, and performance variables. Simulated catch-and-release fishing included combinations of depth of capture and thermocline exposure reflective of environmental conditions experienced in the Gulf of Mexico. Frequency of occurrence of barotrauma and lack of reflex response exhibited considerable individual variation. When combined into a single condition or impairment index, individual variation was reduced, and impairment showed significant increases as depth increased and with the addition of thermocline exposure. Performance variables, such as burst swimming speed (BSS) and simulated predator approach distance (AD), were also significantly different by depth. BSSs and predator ADs decreased with increasing depth, were lowest immediately after release, and were affected for up to 15 min, with longer recovery times required as depth increased. The impairment score developed was positively correlated with cortisol concentration and negatively correlated with both BSS and simulated predator AD. The impairment index proved to be an efficient method to estimate the overall impairment of red snapper in the laboratory simulations of capture and shows promise for use in field conditions, to estimate release mortality and vulnerability to predation.}",
     issn = {1054-3139},
     doi = {10.1093/icesjms/fsp255},
     url = {https://doi.org/10.1093/icesjms/fsp255},
@@ -1548,7 +1532,6 @@ keywords = {community development, cryptic species, habitat enhancement, passive
 doi = {https://doi.org/10.1002/ecs2.3840},
 url = {https://esajournals.onlinelibrary.wiley.com/doi/abs/10.1002/ecs2.3840},
 eprint = {https://esajournals.onlinelibrary.wiley.com/doi/pdf/10.1002/ecs2.3840},
-abstract = {Abstract Habitat enhancement, often accomplished through the introduction of artificial structures, is a common strategy used by marine resource managers to provide habitat subsidies, protect sensitive habitat, and create new fishing opportunities. Traditional monitoring methods for assessing habitat enhancement outcomes face numerous limitations, including dependence on environmental conditions and trade-offs between sampling frequency and duration. Passive acoustic monitoring (PAM) is not subject to these same limitations and offers many advantages as a complement to traditional monitoring methods. Our team opportunistically monitored the soundscape and community development of a newly deployed artificial reef and compared it to that of a nearby established artificial reef using PAM and underwater time-lapse videos. Specifically, we compared the sound pressure level (SPL) timeseries, dusk peak in SPL, and dusk power spectrum between the two artificial reefs to evaluate whether and on what timescale the soundscapes converged. Additionally, we tracked temporal patterns in species-specific vocalizations to identify the trajectory of community development on the new reef. Lastly, we compared the qualitative conclusions drawn from PAM to previously published results from video monitoring of the same two artificial reefs. PAM identified minimal difference in mean low-frequency SPL between the two reefs at the onset of monitoring. Though the timeseries correlation, dusk SPL, and dusk power spectra all varied across sampling periods, there were periods of low-frequency soundscape alignment at four and eleven months following artificial reef deployment, associated with the presence of fish chorusing. The high-frequency timeseries on each reef were well correlated during all sampling periods, despite an initial SPL difference of 17âdB. Throughout monitoring, high-frequency sound levels became more similar between the reefs but did not converge. While video monitoring suggested that demersal species did not colonize the reef until five months post-deployment, patterns in species-specific vocalizations suggested that toadfish (Opsanus sp.) a cryptic, demersal species may have colonized the new reef within two weeks. Our findings demonstrate that passive acoustic monitoring is a useful complement to traditional methodologies and can provide a more holistic view of community development than visual monitoring alone.},
 year = {2021}
 }
 
@@ -1563,7 +1546,6 @@ keywords = {bioacoustics, cusk-eel, ecoacoustics, Ophidiidae, remote sensing, sp
 doi = {https://doi.org/10.1002/aqc.4020},
 url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/aqc.4020},
 eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/aqc.4020},
-abstract = {Abstract Knowledge of the ecology, spatial distribution and conservation status of fish populations is achieved by fishery-dependent techniques, and by more recently developed non-invasive fishery-independent techniques. Passive acoustic monitoring (PAM) is a fishery-independent method that provides remote sensing of soniferous species, populations, communities and ecosystems by recording soundscapes and their components. A case study is presented to demonstrate how PAM can contribute to a dynamic understanding of fish distribution, ecological preferences and conservation status. This case study refers to the cusk-eel Ophidion rochei (Ophidiiformes), a nocturnal, behaviourally cryptic, soniferous fish species, described as uncommon and rare in the scientific literature, and listed as Data Deficient in the IUCN Red List. A systematized literature review was carried out using Ophidion+rochei as the search term, and by grouping records into two main categories: (i) traditional techniques (including all fishery-dependent techniques and underwater visual census); and (ii) PAM. This review highlights how PAM has provided new sightings of O.Â rochei at a rate three times higher than all other monitoring techniques combined. In contrast with the knowledge achieved to date by fishery-dependent techniques, the reported acoustic mass phenomena indicate that this species can be very abundant. Ophidion rochei was found to inhabit a wide range of depths and ecosystems, at least throughout the Mediterranean basin. This paper supports the urgency and the importance of relying on the integration of different fishery-independent techniques for multidisciplinary monitoring, in line with the Goal 14 requirements of the UN Decade of Ocean Science for Sustainable Development.},
 year = {2023}
 }
 
@@ -1609,8 +1591,7 @@ issn = {2352-4855},
 doi = {https://doi.org/10.1016/j.rsma.2019.100801},
 url = {https://www.sciencedirect.com/science/article/pii/S2352485519300040},
 author = {Bocar Sabaly Bald{\' e} and Massal Fall and Justin Kantoussan and Fambaye Ngom Sow and Malick Diouf and Patrice Brehmer},
-keywords = {Data poor fisheries, Fisheries management, Shared stocks, Small scale fisheries, Small pelagic fish, West Africa},
-abstract = {Fisheries management is difficult especially in developing countries where there are little or no data available for stock assessment. Here, a simple model based on the length-based Bayesian biomass (LBB) is applied to length frequencies collected on the two sardinella species (Sardinella maderensis and S. aurita) collected in Senegalese waters (2004 to 2014) to diagnose these stocks and to support the development of fishery management options that may improve the livelihoods of artisanal fishermen. Annual mean length of both species of sardinella showed a large variation during the decadal study period. It is assumed that such variations are due to environmental changes. According to our results, based on the current exploitation rate, both sardinella species are overexploited. To reverse these bad stock status, three management indicators were estimated for both sardinella: (i) length at first capture (Total Length (TL); Lc 24 and 27Â cm for S. maderensis and S. aurita, respectively); (ii) the length at maximum possible yield per recruit (TL; Lopt 26 and 29Â cm for S. maderensis and S. aurita, respectively); and (iii) the optimal length for the first capture (TL; Lc_opt; 25 and 28Â cm for S. maderensis and S. aurita, respectively). According to Senegalese maritime fishing code, which sets the small pelagic fish size of the first capture â¥ 18Â cm, we urge the Senegalese governments to press ahead with much needed reforms of the fishing code. We recommend capturing sardinella at the size Lc_opt to provide a natural safeguard against any recruitment failure related to environmental variability and allow individuals to grow and ensure the long-term survival of populations and thus sustainable fisheries. The results suggest that LBB model could be a tool to assess data-poor fisheries allowing the possibility to include in the analysis several years of lengthâfrequency data with a minimum of prerequisites.}
+keywords = {Data poor fisheries, Fisheries management, Shared stocks, Small scale fisheries, Small pelagic fish, West Africa}
 }
 
 @misc{WWF,
@@ -1622,7 +1603,7 @@ note = "[Online; accessed 27-May-2024]"
 
 @article{Koepnick2019,
   title={De novo protein design by citizen scientists},
-  author={Koepnick, Brian and Flatten, Jeff and Husain, Tamir and Ford, Alex and Silva, Daniel-Adriano and Bick, Matthew J and Bauer, Aaron and Liu, Gaohua and Ishida, Yojiro and Boykov, Alexander and others},
+  author={Koepnick, Brian and Flatten, Jeff and Husain, Tamir and Ford, Alex and Silva, Daniel-Adriano and Bick, Matthew J and Bauer, Aaron and Liu, Gaohua and Ishida, Yojiro and Boykov, Alexander and Roger, Estep D and Kleinfelter, Susan and N{\o{}}rg\r{a}rd-Solano, Toke and Wei, Linda and Players, Foldit and Montelione, Gaetano T and DiMaio, Frank and Popovi\'{c}, Zoran and Khatib, Firas and Cooper, Seth and Baker, David},
   journal={Nature},
   volume={570},
   number={7761},
@@ -1650,7 +1631,6 @@ year = {2018}
     volume = {17},
     url = {https://doi.org/10.1371/journal.pone.0268048},
     pages = {1-15},
-    abstract = {Although terrestrial gastropods are remarkably diverse, our knowledge of them is still lacking, especially for species from the Global South. As such, new tools to help researchers collect data on these organisms are very welcome. With this in mind, we investigated Brazilian observations on iNaturalist to assess the feasibility of the data available on the platform as a basis for studies on the tropical terrestrial gastropod fauna. The observations on iNaturalist were filtered by country, Brazil, and higher taxa, namely Eupulmonata, Cyclophoroidea and Helicinoidea, yielding a sample of 4,983 observations. These observations were then reviewed in search of records of rare or little-known species, species found outside their previously known range, and interesting ecological interactions. Exotic species made up 35% to 39% of the sampled iNaturalist records. The most commonly observed species were Lissachatina fulica (Bowdich, 1822), Bradybaena similaris (FÃ©russac, 1822), Drymaeus papyraceus (Mawe, 1823), Drymaeus interpunctus (E. von Martens, 1887), Limacus flavus (Linnaeus, 1758), Meghimatium pictum (Stoliczka, 1873), Cornu aspersum (O. F. MÃŒller, 1774), Vaginulus taunaisii (FÃ©russac, 1821), Ovachlamys fulgens (Gude, 1900), and Bulimulus tenuissimus (FÃ©russac, 1832). In total, 166 observations were deemed of interest to our purposes (e.g., rare species, range extensions, ecological interactions), totalling 46 identified species and 16 observations identified at genus level. Among the selected observations, we found pictures of live specimens of species that were previously known only from their shells, such as Megalobulimus pergranulatus (Pilsbry, 1901), bringing to light their appearances in life. Two potentially new species belonging to the genera Plekocheilus Guilding, 1827 and Megalobulimus K. Miller, 1878 were revealed. Additionally, we found records of living individuals of two species that were previously presumed to be possibly extinct, Leiostracus carnavalescus Simone & Salvador, 2016, and Gonyostomus egregius (Pfeiffer, 1845). We take the opportunity to discuss individual records of interest, evaluate the quality of the data and possible improvements, as well the potential and implications of the use of the iNaturalist platform for research in Brazil and other tropical countries. While iNaturalist has its limitations, it holds great potential to help document biodiversity in the tropics.},
     number = {5},
 
 }
